# Sectoriales

./: README.md  pyproject.toml
config/: ejemplo_configuracion.yaml
src/sectoriales/: __init__.py  cli.py  processing.py
tests/: test_processing.py
