[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sectoriales"
version = "0.1.0"
description = "Herramientas para consolidar información sectorial de bancos a partir de Excel."
authors = [{name = "Banco de Inversión", email = "contacto@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5",
    "openpyxl>=3.1",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
sectoriales-process = "sectoriales.cli:main"
